Adds aria-hidden to modal controller to improve accessibility

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
+    "aria-hidden": "^1.2.4",
     "fuse.js": "^7.0.0",
     "tippy.js": "^6.3.7"
   },
