--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
+    "@stimulus-components/dialog": "^1.0.1",
     "aria-hidden": "^1.2.4",
     "fuse.js": "^7.0.0",
     "tippy.js": "^6.3.7"
